clang/test/BSC/Negative/OwnedStruct/destructor/invalid_destructor_param_num.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {    
 ~A(A this, int x) { // expected-error {{destructor can only have one parameter}}
  }

};


owned struct B<T> {    
 ~B(int x,int y) { // expected-error {{the parameter of destructor must be 'B<T> this'}}
  }

};